--- a/analysis/analysis_wq/Pancreas_main_function_pre_sl_wq.ipynb
+++ b/analysis/analysis_wq/Pancreas_main_function_pre_sl_wq.ipynb
@@ -225,297 +225,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "6aa998f4-9dcc-405e-b4a9-e99a8bab7107",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cellIndex</th>\n",
-       "      <th>gene_name</th>\n",
-       "      <th>s0</th>\n",
-       "      <th>u0</th>\n",
-       "      <th>s1</th>\n",
-       "      <th>u1</th>\n",
-       "      <th>alpha</th>\n",
-       "      <th>beta</th>\n",
-       "      <th>gamma</th>\n",
-       "      <th>cost</th>\n",
-       "      <th>clusters</th>\n",
-       "      <th>cellID</th>\n",
-       "      <th>embedding1</th>\n",
-       "      <th>embedding2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2010107G23Rik</td>\n",
-       "      <td>0.645871</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.631752</td>\n",
-       "      <td>0.000444</td>\n",
-       "      <td>0.004090</td>\n",
-       "      <td>0.033074</td>\n",
-       "      <td>0.143236</td>\n",
-       "      <td>0.085577</td>\n",
-       "      <td>Pre-endocrine</td>\n",
-       "      <td>AAACCTGAGAGGGATA</td>\n",
-       "      <td>6.143066</td>\n",
-       "      <td>-0.063644</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2010107G23Rik</td>\n",
-       "      <td>0.659958</td>\n",
-       "      <td>0.050844</td>\n",
-       "      <td>0.667935</td>\n",
-       "      <td>0.049499</td>\n",
-       "      <td>0.002315</td>\n",
-       "      <td>0.013641</td>\n",
-       "      <td>0.159593</td>\n",
-       "      <td>0.085577</td>\n",
-       "      <td>Ductal</td>\n",
-       "      <td>AAACCTGAGCCTTGAT</td>\n",
-       "      <td>-9.906417</td>\n",
-       "      <td>0.197778</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2010107G23Rik</td>\n",
-       "      <td>0.536477</td>\n",
-       "      <td>0.031027</td>\n",
-       "      <td>0.543241</td>\n",
-       "      <td>0.030047</td>\n",
-       "      <td>0.002852</td>\n",
-       "      <td>0.018068</td>\n",
-       "      <td>0.154822</td>\n",
-       "      <td>0.085577</td>\n",
-       "      <td>Alpha</td>\n",
-       "      <td>AAACCTGAGGCAATTA</td>\n",
-       "      <td>7.559791</td>\n",
-       "      <td>0.583762</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2010107G23Rik</td>\n",
-       "      <td>0.172749</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.168829</td>\n",
-       "      <td>0.000422</td>\n",
-       "      <td>0.003884</td>\n",
-       "      <td>0.025258</td>\n",
-       "      <td>0.148675</td>\n",
-       "      <td>0.085577</td>\n",
-       "      <td>Ductal</td>\n",
-       "      <td>AAACCTGCATCATCCC</td>\n",
-       "      <td>-11.283765</td>\n",
-       "      <td>4.218998</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2010107G23Rik</td>\n",
-       "      <td>2.669759</td>\n",
-       "      <td>0.024144</td>\n",
-       "      <td>2.671663</td>\n",
-       "      <td>0.020978</td>\n",
-       "      <td>0.003705</td>\n",
-       "      <td>0.064247</td>\n",
-       "      <td>0.127344</td>\n",
-       "      <td>0.085577</td>\n",
-       "      <td>Ngn3 high EP</td>\n",
-       "      <td>AAACCTGGTAAGTGGC</td>\n",
-       "      <td>1.721565</td>\n",
-       "      <td>-4.753407</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7391995</th>\n",
-       "      <td>3691</td>\n",
-       "      <td>Zfp949</td>\n",
-       "      <td>0.175796</td>\n",
-       "      <td>0.175190</td>\n",
-       "      <td>0.163429</td>\n",
-       "      <td>0.174457</td>\n",
-       "      <td>0.209083</td>\n",
-       "      <td>0.203498</td>\n",
-       "      <td>0.271190</td>\n",
-       "      <td>0.043265</td>\n",
-       "      <td>Pre-endocrine</td>\n",
-       "      <td>TTTGTCAAGTGACATA</td>\n",
-       "      <td>4.768472</td>\n",
-       "      <td>-1.388353</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7391996</th>\n",
-       "      <td>3692</td>\n",
-       "      <td>Zfp949</td>\n",
-       "      <td>0.078194</td>\n",
-       "      <td>0.130215</td>\n",
-       "      <td>0.086273</td>\n",
-       "      <td>0.142232</td>\n",
-       "      <td>0.216891</td>\n",
-       "      <td>0.203658</td>\n",
-       "      <td>0.268408</td>\n",
-       "      <td>0.043265</td>\n",
-       "      <td>Ngn3 high EP</td>\n",
-       "      <td>TTTGTCAAGTGTGGCA</td>\n",
-       "      <td>-1.873335</td>\n",
-       "      <td>-4.182650</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7391997</th>\n",
-       "      <td>3693</td>\n",
-       "      <td>Zfp949</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.044002</td>\n",
-       "      <td>0.011225</td>\n",
-       "      <td>0.076212</td>\n",
-       "      <td>0.210932</td>\n",
-       "      <td>0.204190</td>\n",
-       "      <td>0.266029</td>\n",
-       "      <td>0.043265</td>\n",
-       "      <td>Ductal</td>\n",
-       "      <td>TTTGTCAGTTGTTTGG</td>\n",
-       "      <td>-9.882250</td>\n",
-       "      <td>-0.105594</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7391998</th>\n",
-       "      <td>3694</td>\n",
-       "      <td>Zfp949</td>\n",
-       "      <td>0.041343</td>\n",
-       "      <td>0.086365</td>\n",
-       "      <td>0.050158</td>\n",
-       "      <td>0.108793</td>\n",
-       "      <td>0.214619</td>\n",
-       "      <td>0.203931</td>\n",
-       "      <td>0.267263</td>\n",
-       "      <td>0.043265</td>\n",
-       "      <td>Alpha</td>\n",
-       "      <td>TTTGTCATCGAATGCT</td>\n",
-       "      <td>6.612424</td>\n",
-       "      <td>4.531895</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7391999</th>\n",
-       "      <td>3695</td>\n",
-       "      <td>Zfp949</td>\n",
-       "      <td>0.085127</td>\n",
-       "      <td>0.232572</td>\n",
-       "      <td>0.116726</td>\n",
-       "      <td>0.219691</td>\n",
-       "      <td>0.218535</td>\n",
-       "      <td>0.202875</td>\n",
-       "      <td>0.269143</td>\n",
-       "      <td>0.043265</td>\n",
-       "      <td>Epsilon</td>\n",
-       "      <td>TTTGTCATCTGTTTGT</td>\n",
-       "      <td>3.071044</td>\n",
-       "      <td>1.120432</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7392000 rows × 14 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         cellIndex      gene_name        s0        u0        s1        u1  \\\n",
-       "0                0  2010107G23Rik  0.645871  0.000000  0.631752  0.000444   \n",
-       "1                1  2010107G23Rik  0.659958  0.050844  0.667935  0.049499   \n",
-       "2                2  2010107G23Rik  0.536477  0.031027  0.543241  0.030047   \n",
-       "3                3  2010107G23Rik  0.172749  0.000000  0.168829  0.000422   \n",
-       "4                4  2010107G23Rik  2.669759  0.024144  2.671663  0.020978   \n",
-       "...            ...            ...       ...       ...       ...       ...   \n",
-       "7391995       3691         Zfp949  0.175796  0.175190  0.163429  0.174457   \n",
-       "7391996       3692         Zfp949  0.078194  0.130215  0.086273  0.142232   \n",
-       "7391997       3693         Zfp949  0.000000  0.044002  0.011225  0.076212   \n",
-       "7391998       3694         Zfp949  0.041343  0.086365  0.050158  0.108793   \n",
-       "7391999       3695         Zfp949  0.085127  0.232572  0.116726  0.219691   \n",
-       "\n",
-       "            alpha      beta     gamma      cost       clusters  \\\n",
-       "0        0.004090  0.033074  0.143236  0.085577  Pre-endocrine   \n",
-       "1        0.002315  0.013641  0.159593  0.085577         Ductal   \n",
-       "2        0.002852  0.018068  0.154822  0.085577          Alpha   \n",
-       "3        0.003884  0.025258  0.148675  0.085577         Ductal   \n",
-       "4        0.003705  0.064247  0.127344  0.085577   Ngn3 high EP   \n",
-       "...           ...       ...       ...       ...            ...   \n",
-       "7391995  0.209083  0.203498  0.271190  0.043265  Pre-endocrine   \n",
-       "7391996  0.216891  0.203658  0.268408  0.043265   Ngn3 high EP   \n",
-       "7391997  0.210932  0.204190  0.266029  0.043265         Ductal   \n",
-       "7391998  0.214619  0.203931  0.267263  0.043265          Alpha   \n",
-       "7391999  0.218535  0.202875  0.269143  0.043265        Epsilon   \n",
-       "\n",
-       "                   cellID  embedding1  embedding2  \n",
-       "0        AAACCTGAGAGGGATA    6.143066   -0.063644  \n",
-       "1        AAACCTGAGCCTTGAT   -9.906417    0.197778  \n",
-       "2        AAACCTGAGGCAATTA    7.559791    0.583762  \n",
-       "3        AAACCTGCATCATCCC  -11.283765    4.218998  \n",
-       "4        AAACCTGGTAAGTGGC    1.721565   -4.753407  \n",
-       "...                   ...         ...         ...  \n",
-       "7391995  TTTGTCAAGTGACATA    4.768472   -1.388353  \n",
-       "7391996  TTTGTCAAGTGTGGCA   -1.873335   -4.182650  \n",
-       "7391997  TTTGTCAGTTGTTTGG   -9.882250   -0.105594  \n",
-       "7391998  TTTGTCATCGAATGCT    6.612424    4.531895  \n",
-       "7391999  TTTGTCATCTGTTTGT    3.071044    1.120432  \n",
-       "\n",
-       "[7392000 rows x 14 columns]"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#detail_result_path = '/Users/shengyuli/Library/CloudStorage/OneDrive-HoustonMethodist/work/Velocity/data/pancreas/velocity_result/velocity_result_all_genes_with_bin/2000_smooth/combined_detail/combined_detail.csv'\n",
     "detail_result_path = '/Users/wanglab/Documents/ShengyuLi/Velocity/data/pancreas/velocity_result/2000_smooth/velocity_result_all_genes_with_bin/combined_detail/combined_detail.csv'\n",
     "#detail_result_path = '/Users/chen.weiqing/code/celldancer/pancreas/combined_detail.csv'\n",
     "\n",
-    "load_cellDancer=pd.read_csv(detail_result_path)\n",
-    "load_cellDancer"
+    "load_cellDancer=pd.read_csv(detail_result_path)"
    ]
   },
   {
