neuro - speed test notebook

--- a/analysis/NEURO_sl/Neuro_speed_test.ipynb
+++ b/analysis/NEURO_sl/Neuro_speed_test.ipynb
@@ -97,21 +97,133 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using /Users/wanglab/Documents/ShengyuLi/Velocity/data/neuro/velocity_result/test_speed/epoch200check_n10Ratio0.1autoDTrueautoNFalsep3binTruejob40/cell_dancer_velocity_2022-05-26 19-09-50 as the output path.\n"
+      "Using /Users/wanglab/Documents/ShengyuLi/Velocity/data/neuro/velocity_result/test_speed/epoch200check_n10Ratio0.1autoDTrueautoNFalsep3binTruejob40/cell_dancer_velocity_2022-05-26 19-21-01 as the output path.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Velocity Estimation:   6%|█▎                     | 3/54 [01:33<25:57, 30.54s/it]"
+      "Velocity Estimation: 100%|██████████████████████| 54/54 [27:43<00:00, 30.80s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using /Users/wanglab/Documents/ShengyuLi/Velocity/data/neuro/velocity_result/test_speed/epoch200check_n10Ratio0.1autoDTrueautoNFalsep3binTruejob35/cell_dancer_velocity_2022-05-26 19-55-49 as the output path.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Velocity Estimation: 100%|██████████████████████| 54/54 [28:58<00:00, 32.20s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using /Users/wanglab/Documents/ShengyuLi/Velocity/data/neuro/velocity_result/test_speed/epoch200check_n10Ratio0.1autoDTrueautoNFalsep3binTruejob30/cell_dancer_velocity_2022-05-26 20-31-45 as the output path.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Velocity Estimation: 100%|██████████████████████| 54/54 [29:43<00:00, 33.03s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using /Users/wanglab/Documents/ShengyuLi/Velocity/data/neuro/velocity_result/test_speed/epoch200check_n10Ratio0.1autoDTrueautoNFalsep3binTruejob25/cell_dancer_velocity_2022-05-26 21-08-23 as the output path.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Velocity Estimation: 100%|██████████████████████| 54/54 [30:00<00:00, 33.34s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using /Users/wanglab/Documents/ShengyuLi/Velocity/data/neuro/velocity_result/test_speed/epoch200check_n10Ratio0.1autoDTrueautoNFalsep3binTruejob20/cell_dancer_velocity_2022-05-26 21-45-19 as the output path.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Velocity Estimation: 100%|██████████████████████| 54/54 [30:14<00:00, 33.60s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using /Users/wanglab/Documents/ShengyuLi/Velocity/data/neuro/velocity_result/test_speed/epoch200check_n10Ratio0.1autoDTrueautoNFalsep3binTruejob15/cell_dancer_velocity_2022-05-26 22-22-22 as the output path.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Velocity Estimation: 100%|███████████████████| 54/54 [6:36:49<00:00, 440.91s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using /Users/wanglab/Documents/ShengyuLi/Velocity/data/neuro/velocity_result/test_speed/epoch200check_n10Ratio0.1autoDTrueautoNFalsep3binTruejob10/cell_dancer_velocity_2022-05-27 05-05-55 as the output path.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Velocity Estimation: 100%|██████████████████████| 54/54 [40:50<00:00, 45.38s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using /Users/wanglab/Documents/ShengyuLi/Velocity/data/neuro/velocity_result/test_speed/epoch200check_n10Ratio0.1autoDTrueautoNFalsep3binTruejob5/cell_dancer_velocity_2022-05-27 05-53-24 as the output path.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Velocity Estimation: 100%|████████████████████| 54/54 [1:05:05<00:00, 72.31s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using /Users/wanglab/Documents/ShengyuLi/Velocity/data/neuro/velocity_result/test_speed/epoch200check_n10Ratio0.1autoDTrueautoNFalsep3binTruejob1/cell_dancer_velocity_2022-05-27 07-05-14 as the output path.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Velocity Estimation:  83%|███████████████▊   | 45/54 [3:53:33<49:39, 331.05s/it]"
      ]
     }
    ],
    "source": [
     "%autoreload 2\n",
     "\n",
-    "enu=1\n",
+    "#enu=1\n",
     "n_jobs_list=[40,35,30,25,20,15,10,5,1]\n",
     "\n",
     "for enu,n_jobs in enumerate(n_jobs_list):\n",
@@ -165,7 +277,18 @@
     "                                                     save_path=save_path)\n",
     "    time_end=datetime.datetime.now()\n",
     "    time_spent=(time_end-time_start).seconds/60\n",
-    "    time_report=pd.DataFrame({'n_jobs':n_jobs,'time_start':time_start,'time_end':time_end,'time_spent(min)':time_spent}, index=[enu])\n",
+    "    time_report=pd.DataFrame({'n_jobs':n_jobs,\n",
+    "                              'time_start':time_start,\n",
+    "                              'time_end':time_end,\n",
+    "                              'time_spent(min)':time_spent,\n",
+    "                              'max_epoches':max_epoches,\n",
+    "                              'check_val_every_n_epoch':check_val_every_n_epoch,\n",
+    "                              'permutation_ratio':permutation_ratio,\n",
+    "                              'speed_up':speed_up,\n",
+    "                              'norm_u_s':norm_u_s,\n",
+    "                              'patience':patience,\n",
+    "                              'norm_cell_distribution':norm_cell_distribution,\n",
+    "                             }, index=[enu])\n",
     "    if enu==0:\n",
     "        time_report.to_csv('/Users/wanglab/Documents/ShengyuLi/Velocity/data/neuro/velocity_result/test_speed/test_speed.csv',index=False)\n",
     "    else:\n",
