--- a/analysis/NEURO_sl/Neuro_speed_test-njob20_interval_equal_njob.ipynb
+++ b/analysis/NEURO_sl/Neuro_speed_test-njob20_interval_equal_njob.ipynb
@@ -278,11 +278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "10984980-100a-4c75-9165-a12f20209677",
    "metadata": {},
    "outputs": [],
    "source": [
+    "raw_path='/Users/wanglab/Documents/ShengyuLi/Velocity/data/raw_data/mouse_endo_blood20to25_2000_genes_moment100.csv'\n",
+    "#raw_path='/Users/chen.weiqing/code/celldancer/DentateGyrus.csv'\n",
+    "cell_type_u_s=pd.read_csv(raw_path)\n",
     "ordered=cell_type_u_s[['gene_name','u0','s0','cellID','clusters','embedding1','embedding2']]\n",
     "ordered.rename(columns={'u0': 'unsplice', 's0': 'splice'}, inplace=True)\n",
     "# renamed=ordered.rename(columns={'u0': 'unspliced', 's0': 'spliced'}, inplace=True)\n"
@@ -290,12 +293,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
+   "id": "fc58c02c-50b7-42d8-b584-4cbbde36c000",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gene_name</th>\n",
+       "      <th>unsplice</th>\n",
+       "      <th>splice</th>\n",
+       "      <th>cellID</th>\n",
+       "      <th>clusters</th>\n",
+       "      <th>embedding1</th>\n",
+       "      <th>embedding2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sox17</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.043971</td>\n",
+       "      <td>cell_363</td>\n",
+       "      <td>Blood progenitors 2</td>\n",
+       "      <td>3.460521</td>\n",
+       "      <td>15.574629</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sox17</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>cell_382</td>\n",
+       "      <td>Blood progenitors 2</td>\n",
+       "      <td>2.490433</td>\n",
+       "      <td>14.971734</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sox17</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.018161</td>\n",
+       "      <td>cell_385</td>\n",
+       "      <td>Blood progenitors 2</td>\n",
+       "      <td>2.351203</td>\n",
+       "      <td>15.267069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sox17</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>cell_393</td>\n",
+       "      <td>Blood progenitors 2</td>\n",
+       "      <td>5.899098</td>\n",
+       "      <td>14.388825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sox17</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>cell_398</td>\n",
+       "      <td>Blood progenitors 2</td>\n",
+       "      <td>4.823139</td>\n",
+       "      <td>15.374831</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24657995</th>\n",
+       "      <td>Gm47283</td>\n",
+       "      <td>0.214961</td>\n",
+       "      <td>1.145533</td>\n",
+       "      <td>cell_139318</td>\n",
+       "      <td>Erythroid3</td>\n",
+       "      <td>8.032358</td>\n",
+       "      <td>7.603037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24657996</th>\n",
+       "      <td>Gm47283</td>\n",
+       "      <td>0.300111</td>\n",
+       "      <td>1.072944</td>\n",
+       "      <td>cell_139321</td>\n",
+       "      <td>Erythroid3</td>\n",
+       "      <td>10.352904</td>\n",
+       "      <td>6.446736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24657997</th>\n",
+       "      <td>Gm47283</td>\n",
+       "      <td>0.292607</td>\n",
+       "      <td>1.199875</td>\n",
+       "      <td>cell_139326</td>\n",
+       "      <td>Erythroid3</td>\n",
+       "      <td>9.464873</td>\n",
+       "      <td>7.261099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24657998</th>\n",
+       "      <td>Gm47283</td>\n",
+       "      <td>0.266031</td>\n",
+       "      <td>1.114659</td>\n",
+       "      <td>cell_139327</td>\n",
+       "      <td>Erythroid3</td>\n",
+       "      <td>9.990495</td>\n",
+       "      <td>7.243880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24657999</th>\n",
+       "      <td>Gm47283</td>\n",
+       "      <td>0.164675</td>\n",
+       "      <td>1.111358</td>\n",
+       "      <td>cell_139330</td>\n",
+       "      <td>Erythroid3</td>\n",
+       "      <td>8.260699</td>\n",
+       "      <td>7.935455</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>24658000 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         gene_name  unsplice    splice       cellID             clusters  \\\n",
+       "0            Sox17  0.000000  0.043971     cell_363  Blood progenitors 2   \n",
+       "1            Sox17  0.000000  0.000000     cell_382  Blood progenitors 2   \n",
+       "2            Sox17  0.000000  0.018161     cell_385  Blood progenitors 2   \n",
+       "3            Sox17  0.000000  0.000000     cell_393  Blood progenitors 2   \n",
+       "4            Sox17  0.000000  0.000000     cell_398  Blood progenitors 2   \n",
+       "...            ...       ...       ...          ...                  ...   \n",
+       "24657995   Gm47283  0.214961  1.145533  cell_139318           Erythroid3   \n",
+       "24657996   Gm47283  0.300111  1.072944  cell_139321           Erythroid3   \n",
+       "24657997   Gm47283  0.292607  1.199875  cell_139326           Erythroid3   \n",
+       "24657998   Gm47283  0.266031  1.114659  cell_139327           Erythroid3   \n",
+       "24657999   Gm47283  0.164675  1.111358  cell_139330           Erythroid3   \n",
+       "\n",
+       "          embedding1  embedding2  \n",
+       "0           3.460521   15.574629  \n",
+       "1           2.490433   14.971734  \n",
+       "2           2.351203   15.267069  \n",
+       "3           5.899098   14.388825  \n",
+       "4           4.823139   15.374831  \n",
+       "...              ...         ...  \n",
+       "24657995    8.032358    7.603037  \n",
+       "24657996   10.352904    6.446736  \n",
+       "24657997    9.464873    7.261099  \n",
+       "24657998    9.990495    7.243880  \n",
+       "24657999    8.260699    7.935455  \n",
+       "\n",
+       "[24658000 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ordered"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "875f7bf5-27c2-487f-b0b5-e1099ec62cbb",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "5d80a6bf-e2f7-4e3c-96de-f30c5b4434ae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ordered.to_csv('/Users/wanglab/Documents/ShengyuLi/Velocity/data/raw_data/DentateGyrus_name_changed.csv',index=False)"
+    "ordered.to_csv('/Users/wanglab/Documents/ShengyuLi/Velocity/data/raw_data/GastrulationErythroid.csv',index=False)"
    ]
   },
   {
