--- a/analysis/CaseStudyNotebook/Neuro_velocity_analysis.ipynb
+++ b/analysis/CaseStudyNotebook/Neuro_velocity_analysis.ipynb
@@ -1382,7 +1382,9 @@
   {
    "cell_type": "markdown",
    "id": "ba421ec5-7426-4fe0-bbf5-f1f8ea9efff1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Coumpute and visualize the prediction in embedding level"
    ]
