--- a/analysis/CaseStudyNotebook/Neuro_velocity_analysis.ipynb
+++ b/analysis/CaseStudyNotebook/Neuro_velocity_analysis.ipynb
@@ -955,7 +955,7 @@
    "id": "b7156a67-5b12-4201-9d77-f1705a6f5cfa",
    "metadata": {},
    "source": [
-    "## Kinetics in Cell Level"
+    "## Kinetics in embedding level"
    ]
   },
   {
@@ -963,7 +963,7 @@
    "id": "0164ffbd-3daf-4259-a55a-5d7c017cd3d9",
    "metadata": {},
    "source": [
-    "cellDancer provides other descriptive functions for visualization. In embedding level, we could visualize the alpha, beta, gamma, spliced reads, and unspliced reads with ```celldancer.cdplt.cell.scatter_cell()```. Taking Ntrk2 as an example, astrocytes and OPCs have high α and low β, resulting in high expression of unspliced Ntrk2. Dentate gyrus granule neurons and pyramidal neurons have high β and low γ, resulting in high expression of spliced Ntrk2."
+    "cellDancer provides other descriptive functions for visualization. In embedding level, we could visualize the alpha, beta, gamma, spliced reads, and unspliced reads with ```celldancer.cdplt.cell.scatter_cell()```. The specific genes could be analyzed based one the kinetics' plot. Taking Ntrk2 as an example, astrocytes and OPCs have high α and low β, resulting in high expression of unspliced Ntrk2. Dentate gyrus granule neurons and pyramidal neurons have high β and low γ, resulting in high expression of spliced Ntrk2."
    ]
   },
   {
